# pjm_test

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: pjm_baseline_raw.yaml  pjm_baseline_spike_v2.yaml  pjm_day_ahead_current_processed.yaml  pjm_day_ahead_kaggle.yaml  pjm_day_ahead_v1.yaml  pjm_spike_smoke.yaml  pjm_spike_smoke_v2.yaml  tmp_feature_group_a.yaml  tmp_feature_group_b.yaml  tmp_full_compare.yaml  tmp_full_compare_q15_multi.yaml
docs/: ensemble-research-conclusions.md
notebooks/: kaggle_pjm_pipeline.ipynb
scripts/: analyze_hpo_ranking_fidelity.py  audit_event_risk_overlay.py  backtest_all_models.py  diagnose_nhits_underperformance.py  evaluate_and_plot.py  export_nbeatsx_snapshot.py  export_report_assets.py  finalize_quality_flow.py  inject_prediction_context.py  predict_nbeatsx_snapshot.py  prepare_data.py  retrieve_nbeatsx.py  run_pipeline.py  tune_model.py  tune_nbeatsx.py
tests/: test_backtest_protocol.py  test_config_boundary.py  test_config_contracts.py  test_copula.py  test_data_ingress.py  test_data_pipeline.py  test_evaluate_script.py  test_evaluator.py  test_event_risk_tail_overlay.py  test_hour_x_regime_grid.py  test_kaggle.py  test_median_bias_grid.py  test_model_io.py  test_model_registry_target_filter.py  test_model_snapshots.py  test_models.py  test_normal_day.py  test_official_weather_ready.py  test_ops.py  test_prediction_context.py  test_prediction_contract.py  test_quality_flow_manifest.py  test_quality_flow_registry.py  test_quality_gate.py  test_quantile_losses.py  test_quantile_postprocess.py  (+16 more)
(+198 files in other folders)
